archive/mcdso/templates/nexus/nexus-route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: nexus
  name: nexus
spec:
  port:
    targetPort: 8081-tcp
  to:
    kind: Service
    name: nexus
    weight: 100
